--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,8 @@ jwt.algorithm.key=SuperSecureSecretKey
 jwt.issuer=eCommerce
 jwt.expiryInSeconds=604800
 
+email.from=no-reply@ecommerce.com
+app.frontend.url=http://ecommerce.com
+
 
 
