--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,8 @@ jwt.expiryInSeconds=604800
 email.from=no-reply@ecommerce.com
 app.frontend.url=http://ecommerce.com
 
+#spring.mail.host=localhost
+#spring.mail.port=25
+
 
 
