2 დაემატა ტესტებამდე, არ უშვებს.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=postgres
 spring.datasource.password=example
 spring.datasource.url = jdbc:postgresql://localhost:5432/ecommerce
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.database_platform=org.hibernate.dialect.PostgreSQLDialect
 encryption.salt.rounds=10
 
@@ -14,8 +14,16 @@ jwt.expiryInSeconds=604800
 email.from=no-reply@ecommerce.com
 app.frontend.url=http://ecommerce.com
 
-#spring.mail.host=localhost
-#spring.mail.port=25
+spring.mail.host=localhost
+spring.mail.port=587
+
+logging.level.root=debug
+
+spring.jpa.show-sql=true
+spring.properties.mail.smtp.auth=true
+spring.properties.mail.smtp.starttls.enable=true
+
+
 
 
 
