3 დაემატა ტესტებამდე, არ უშვებს.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,19 +11,21 @@ jwt.algorithm.key=SuperSecureSecretKey
 jwt.issuer=eCommerce
 jwt.expiryInSeconds=604800
 
+# Email configuration
 email.from=no-reply@ecommerce.com
+
+# General configuration
 app.frontend.url=http://ecommerce.com
 
+# SMTP configuration
 spring.mail.host=localhost
-spring.mail.port=587
+spring.mail.port=25
+
+#spring.properties.mail.smtp.auth=true
+#spring.properties.mail.smtp.starttls.enable=true
+
 
 logging.level.root=debug
-
 spring.jpa.show-sql=true
-spring.properties.mail.smtp.auth=true
-spring.properties.mail.smtp.starttls.enable=true
-
-
-
 
 
