--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,23 @@ services:
     environment:
       POSTGRES_PASSWORD: example
     volumes:
-      - pgdata:/var/lib/postgresql/data
+        - pgdata:/var/lib/postgresql/data
 
+  smtp4dev:
+    image: rnwood/smtp4dev:v3
+    restart: always
+    ports:
+      # Change the number before : to the port the web interface should be accessible on
+      - "5000:80"
+      # Change the number before : to the port the SMTP server should be accessible on
+      - "25:25"
+      # Change the number before : to the port the IMAP server should be accessible on
+      - "143:143"
+    volumes:
+      - smtp4dev-data:/smtp4dev
+    environment:
+      - ServerOptions__HostName=smtp4dev
 
 volumes:
   pgdata:
+  smtp4dev-data:
